--- a/css/main.css
+++ b/css/main.css
@@ -53,12 +53,12 @@ li.footer-menu-title a:hover {
   max-width: 1280px;
   background-image: url(../assets/images/hero.gif);
   background-size: 100%;
-  background-position-y: -95px;
+  background-position-y: -87px;
   background-repeat: no-repeat;
 }
 
 .nav {
-  padding: 13px 57px;
+  padding: 20px 57px;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -100,7 +100,7 @@ li.footer-menu-title a:hover {
 .intro-container {
   width: 510px;
   height: 378px;
-  margin-top: 54px;
+  margin-top: 46px;
   padding-left: 50px;
   background-color: #FFF;
   color: #352384;
@@ -110,7 +110,7 @@ li.footer-menu-title a:hover {
 
 .intro-title {
   width: 250px;
-  margin-top: 48px;
+  margin-top: 50px;
   font-size: 33px;
   font-weight: 600;
   text-transform: uppercase;
@@ -180,11 +180,11 @@ input {
 
 .shadow-container {
   width: 100%;
-  box-shadow: 0px -10px 40px 40px rgba(118,40,145);
+  box-shadow: 0px -5px 70px 75px rgba(118,40,145);
 }
 
 .about-config {
-  height: 530px;
+  height: 537px;
   background: linear-gradient(#76278F, #2B1E66);
   color: #FFF;
   display: flex;
@@ -201,9 +201,13 @@ input {
 .about-sub-container {
   width: 530px;
   height: 400px;
-  margin-top: 14px;
+  margin-top: 23px;
   display: flex;
   flex-flow: column;
+}
+
+.about-img {
+  margin-top: 8px;
 }
 
 .about-title {
