--- a/css/main.css
+++ b/css/main.css
@@ -154,6 +154,11 @@ input {
   border-radius: 5px;
   border: none;
   font-size: 16px;
+  cursor: pointer;
+}
+
+.intro-btn:hover {
+  color: #1B1131;
 }
 
 .link {
